CMS-12179 Fix resize of tree
The yui-resize-handle has z-index 1, but was hidden by the z-index 2 of
the wicket-tree. As a result, it was not possible to grab the resize
handle right of the tree. Removing the z-index 2 (which is not needed
anymore for the highlight widget) also reveals the resize handle again.

--- a/cms/api/src/main/styling/styles/_tree.scss
+++ b/cms/api/src/main/styling/styles/_tree.scss
@@ -23,10 +23,6 @@
     padding: 4px 0 4px 0;
     white-space: nowrap;
 
-    // Set to relative to allow highlight-widget to go under
-    position: relative;
-    z-index: 2;
-
     // Make the rows expand so it will activate the scrolling of the .hippotree div
     .row {
       align-items: stretch;
